Small refactorings, introduce LEA operation